dilang-interpreter/test/cases/errors/some_arity.di
fn main() {
    print(Some(1, 2))
}
